# job_search_engine

ai-job-search-os-v0.2/: .env.example  .gitignore  CODEX_BUILD_PROMPT.md  CODEX_IMPLEMENTATION_INSTRUCTIONS_CANDIDATE_EVIDENCE.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  pyproject.toml  requirements.txt
ai-job-search-os-v0.2/config/: candidate_evidence.yaml  company_watchlist.csv  official_source_hints.example.yaml  profile.yaml  scoring.yaml
ai-job-search-os-v0.2/src/job_os/: candidate_evidence.py  cli.py  company_fit.py  company_inspection.py  enrichment.py  enrichment_inspection.py  evidence_map_inspection.py  gmail.py  mapping_calibration.py  models.py  opportunity_score_inspection.py  opportunity_scoring.py  parser.py  requirement_mapping.py  score_review_inspection.py  score_review_planning.py  source_resolver.py  store.py  url_utils.py
ai-job-search-os-v0.2/tests/: test_candidate_evidence.py  test_company_fit_watchlist_v1.py  test_enrichment_checkpoint.py  test_milestones_1_2.py  test_opportunity_scoring_v1.py  test_real_email_checkpoint.py  test_requirement_mapping_checkpoint.py
ai-job-search-os-v0.2/tests/fixtures/: candidate_evidence_invalid_unknown_upstream.yaml  company_research.json  enrichment_responses.json  linkedin_alerts.json
