[project]
name = "ai-job-search-os"
version = "0.2.0"
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "python-dotenv>=1,<2",
  "google-api-python-client>=2",
  "google-auth-oauthlib>=1.2",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "tenacity>=8.2",
]

[project.scripts]
job-os = "job_os.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
